k8s/code-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: codelearn
  labels:
    app: codelearn
  annotations:
    # Uncomment based on your ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "lan-ca"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx # Change based on your ingress controller (nginx, traefik, etc.)
  rules:
    - host: k3s.tkweb.site # Dev environment hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 80
  tls:
    - hosts:
        - k3s.tkweb.site
      secretName: cs-sec
